navbar toggler color and alignment correction

--- a/css/styles.css
+++ b/css/styles.css
@@ -11470,8 +11470,8 @@ body {
 #mainNav .navbar-toggler {
   font-size: 80%;
   padding: 0.75rem;
-  color: #212529;
-  border: 1px solid #212529;
+  color: #fff;
+  border: transparent;
 }
 #mainNav .navbar-toggler:focus {
   outline: none;
